Blog template feedback changes

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -122,6 +122,10 @@
 		margin-bottom: 1.25rem;
 	}
 
+	.how-to--top figure {
+		margin-bottom: 1rem !important;
+	}
+
 	.article__content {
 		img, iframe {
 			max-width: 100%;
