--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -118,11 +118,11 @@
 		}
 	}
 
-	.blog-post__cards figure, .how-to figure {
+	.blog-post__cards figure {
 		margin-bottom: 1.25rem;
 	}
 
-	.how-to--top figure {
+	.how-to figure {
 		margin-bottom: 1rem !important;
 	}
 
