--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,7 @@
 @import 'components/tooltip';
 
 // @import 'components/cookie-banner';
-// @import 'components/announcement-bar';
+@import 'components/announcement-bar';
 // @import 'components/dropdown';
 // @import 'components/video-loop';
 // @import 'components/video-loop-gif';
