Add link to blog articles

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -130,10 +130,10 @@
 		text-decoration: underline !important;
 	}
 
-	.blog-post__cards .blog-card__desc {
-		@apply text-body;
-		pointer-events: none;
-	}
+	// .blog-post__cards .blog-card__desc {
+	// 	@apply text-body;
+	// 	pointer-events: none;
+	// }
 
 	.how-to figure {
 		margin-bottom: 1rem !important;
