--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -16,6 +16,12 @@
 }
 
 @layer utilities {
+	.prevent-selection {
+		-webkit-user-select: none; /* Safari */
+		-ms-user-select: none; /* IE 10 and IE 11 */
+  		user-select: none;
+	}
+
 	.no-underline {
 		text-decoration: none;
 	}
