--- a/src/styles/components/_swatch.scss
+++ b/src/styles/components/_swatch.scss
@@ -166,6 +166,22 @@
 			background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/53cff8f7-45b0-455d-a40e-0f4146fa3e00/public');
 		}
 	}
+	&.antioxidant-glow-cream-refill-pod,
+	&.antioxidant-glow-cream-\+-refill-pod {
+		&:before {
+			@apply bg-primary;
+		}
+	}
+	&.refill-pod {
+		&:before {
+			@apply bg-primary;
+		}
+	}
+	&.antioxidant-glow-cream {
+		&:before {
+			@apply bg-primary;
+		}
+	}
 }
 
 .swatch-overlay {
