fix blog details issue

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -76,6 +76,12 @@
 					margin-right: auto !important;
 					margin-left: auto !important;;
 				}
+
+				ul {
+					list-style-type: disc;
+					padding-inline-start: 40px;
+					margin-block-end: 1em;
+				}
 			}
 		
 			.ratio-1x1::before {
