remove background image for variant swatch pink

--- a/src/styles/components/_swatch.scss
+++ b/src/styles/components/_swatch.scss
@@ -108,11 +108,11 @@
 			background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/8e677e6d-3f49-4df7-28a7-58d79e733000/public');
 		}
 	}
-	&.pink {
-		&:before {
-			background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/d2aeb2be-3a56-4be5-bc1e-581fca1ff700/public');
-		}
-	}
+	// &.pink {
+	// 	&:before {
+	// 		background-image: url('https://imagedelivery.net/ghVX8djKS3R8-n0oGeWHEA/d2aeb2be-3a56-4be5-bc1e-581fca1ff700/public');
+	// 	}
+	// }
 	&.pool-print-limited-edition,
 	&.pool-print {
 		&:before {
