Fixed the blog detail page issues

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -86,6 +86,10 @@
 				.product-variant-swatch li {
 					margin-right: 5px;
 				}
+
+				.yotpo-start__number {
+					font-size: .875rem;
+				}
 			}
 		
 			.ratio-1x1::before {
