--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -189,6 +189,35 @@ afterpay-placement {
 	}
 }
 
+.product-banner__slider-wrapper {
+	min-height: 480px;
+	.img-slider {
+		z-index: 9;
+		cursor: ew-resize;
+		width: 60px;
+		height: 100%;
+		background-color: transparent;
+		opacity: 1;
+		border-radius: 50%;
+
+		&:before {
+			content: " ";
+			border-left: 4px solid #ffffff;
+			height: 100%;
+			padding-left: -24px;
+			position: absolute;
+		}
+
+		.rounded-circle {
+			padding: 10px 14px;
+		}
+
+		svg {
+			height: 12px;
+		}
+	}
+}
+
 // @charset 'UTF-8';
 
 @import 'core/functions';
