update product banner

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -208,8 +208,8 @@ afterpay-placement {
 			position: absolute;
 		}
 
-		.rounded-circle {
-			padding: 10px 14px;
+		.rounded-full {
+			padding: 14px 14px;
 		}
 
 		svg {
