update announcement bar

--- a/src/styles/core/_colors-vars.scss
+++ b/src/styles/core/_colors-vars.scss
@@ -31,6 +31,7 @@ $border-color: $gray-600;
 
 $custom-theme-colors: (
   'primary': $primary,
+  'primary-light': $primary-light,
   'secondary': $secondary,
   'secondary-light': $secondary-light,
   'gray-400': $gray-400,
