--- a/src/styles/core/_utilities.scss
+++ b/src/styles/core/_utilities.scss
@@ -7,6 +7,10 @@
 	border-color: $gray-500 !important;
 }
 
+.text-primary-light {
+	color: $primary-light;
+}
+
 // Sticky sidebar at bottom
 .sticky-bottom {
 	top: auto;
