--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -17,6 +17,10 @@
 			@apply appearance-none touch-manipulation w-full h-full indent-[-999px];
 		}
 
+		&__gallery-thumb.shadow-lg {
+			box-shadow: 0px 6.5px 8px 0px rgba(21, 21, 21, 0.16);
+		}
+
 		&__button {
 			@apply absolute top-0 bottom-0 z-[1] flex items-center justify-center w-[10%] text-center bg-none border-0;
 
