--- a/src/styles/compounds/_upsell.scss
+++ b/src/styles/compounds/_upsell.scss
@@ -87,3 +87,17 @@
 		}
 	}
 }
+
+.product-side-upsell {
+    .relative.mb-5.flex {
+        .badge {
+            left: 16px;
+        }
+    }
+
+	.relative.mb-5.flex:first-child {
+        .badge {
+            left: 8px;
+        }
+    }
+}
