--- a/src/styles/components/_announcement-bar.scss
+++ b/src/styles/components/_announcement-bar.scss
@@ -26,6 +26,41 @@
     }
 }
 
+.announcement-bar {
+    &__marquee {
+		transform: initial;
+		height: calc-em(32);
+	}
+
+    &__content {
+		position: absolute;
+		white-space: nowrap;
+		will-change: transform;
+		animation: marquee 60s linear infinite;
+		top: calc-em(3);
+		&:hover {
+			animation-play-state: paused;
+		}
+		span {
+			padding-left: calc-em(56);
+			padding-right: calc-em(56);
+			@screen lg {
+				padding-left: calc-em(112);
+				padding-right: calc-em(112);
+			}
+		}
+	}
+}
+
+@keyframes marquee {
+	from {
+		transform: translateX(0);
+	}
+	to {
+		transform: translateX(-50%);
+	}
+}
+
 @media (max-width: 991.98px) {
 	.timer-bar--show header:not(.header--scrolled) {
 		.dropdown--account .dropdown-menu {
