Ordered list blog issue

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -83,6 +83,12 @@
 					margin-block-end: 1em;
 				}
 
+				.ordered-list {
+					list-style: auto;
+					padding-inline-start: 40px;
+					margin-block-end: 1em;
+				}
+
 				.product-variant-swatch li {
 					margin-right: 5px;
 				}
