860t5d37a smaller site collection & pdp

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,3 +66,4 @@
 @import 'templates/sweepstakes';
 // @import 'templates/our-story';
 // @import 'templates/product';
+@import 'templates/p3-site-smaller';
