Blog: Optimise Shop the Article feature for OOS Situation

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -134,9 +134,9 @@
 				}
 			}
 
-			.product-variant-swatch__item[data-available=""] {
-				pointer-events: none;
-			}
+			// .product-variant-swatch__item[data-available=""] {
+			// 	pointer-events: none;
+			// }
 		}
 	}
 
