--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -348,11 +348,6 @@
         }
     }
     
-
-    // collection template
-	.collection-template__products {
-        @apply px-hg;
-    }
     .product-card {
         .rounded-t:not(.swatch-overlay) {
             @apply rounded-t-[32px];
@@ -542,5 +537,34 @@
     // range banner
     .range-banner figcaption {
         @apply lg:top-[24px]
+    }
+
+    // collection template
+	.collection-template__products {
+        @apply px-hg;
+
+        .product-title__text {
+            @apply min-h-[54px] mb-0;
+        }
+
+        .product-card {
+            @apply mb-4;
+
+            button {
+                @apply max-h-[none] min-h-[38px];
+            }
+
+            .swatch-overlay {
+                @apply left-1 right-1 lg:left-g lg:right-g;
+
+                .product-variant-swatch__item {
+                    @apply w-auto lg:w-1/4;
+                }
+            }
+
+            &__content {
+                @apply lg:pt-25;
+            }
+        } 
     }
 }
