860t5d37a abtest reduce stars icon

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -410,7 +410,11 @@
             @apply order-2 justify-start lg:mb-[1rem];
 
             svg {
-                @apply w-[12px] h-[12px];
+                @apply w-1 h-1 ml-[4px];
+
+                &:first-child {
+                    @apply ml-0;
+                }
             }
 
             .review-star__v1 {
