--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -195,6 +195,15 @@
 			font-size: inherit;
 			color: inherit;
 		}
+
+		h1 a:hover,
+		h2 a:hover,
+		h3 a:hover,
+		h4 a:hover,
+		h5 a:hover,
+		h6 a:hover {
+			@apply text-primary;
+		}
 	}
 
 	.badge-blog a,
