--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -62,6 +62,26 @@
 	.text-underline {
 		@apply underline;
 	}
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none;  /* IE and Edge */
+		scrollbar-width: none;  /* Firefox */
+	}
+	.small-scrollbar::-webkit-scrollbar {
+		width: 4px;
+	}
+	.small-scrollbar::-webkit-scrollbar-track {
+		box-shadow: inset 0 0 4px #F5F5F5;
+		border-radius: 10px;
+	}
+	.small-scrollbar::-webkit-scrollbar-thumb {
+		background: #A3A3A3;
+		border-radius: 2px;
+	}
 }
 
 @layer components {
@@ -119,6 +139,8 @@
 			margin-bottom: 0 !important;
 		}
 	}
+
+	
 }
 
 @keyframes gradient-shimmer {
