86er9r3yq blog smaller

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -213,7 +213,7 @@
 			border-radius: calc-em(20);
 			white-space: nowrap;
 			cursor: pointer;
-			@apply text-body-color;
+			@apply text-gray-600;
 
 			&.active {
 				@apply bg-primary;
