article template smaller

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,7 +57,7 @@
 @import 'sections/instagram';
 // @import 'sections/yotpo-widget';
 
-// @import 'templates/article';
+@import 'templates/article';
 @import 'templates/blog';
 @import 'templates/collection';
 @import 'templates/stockist';
