86er9r3yq blog & article smaller update

--- a/src/styles/templates/_article.scss
+++ b/src/styles/templates/_article.scss
@@ -7,7 +7,7 @@
 
 .blog-post-grid__content .article__content {
 	p, h1, h2, h3, h4, h5, h6 {
-		@apply px-g block;
+		@apply px-g block lg:px-0;
 	}
 
 	// p img {
